Fix #47 : Si les emojis ne sont pas supportés, coloré les rectangles visible

--- a/public/jeu.css
+++ b/public/jeu.css
@@ -339,3 +339,15 @@ h1 {
     font-size: 24px;
   }
 }
+
+.emoji-carre-rouge {
+  color: red;
+}
+
+.emoji-cercle-jaune {
+  color: yellow;
+}
+
+.emoji-carre-bleu {
+  color: skyblue;
+}
